--- a/package.json
+++ b/package.json
@@ -44,15 +44,16 @@
     },
     "homepage": "https://github.com/asabzposh/avert#readme",
     "devDependencies": {
+        "@hapi/hapi": "^19.1.1",
+        "@hapi/lab": "^24.0.0",
         "blipp": "^3.1.3",
         "boom": "^7.3.0",
         "code": "^5.2.4",
         "coveralls": "^3.1.0",
+        "eslint": ">=5.0.0",
         "eslint-config-prettier": "^4.3.0",
         "eslint-plugin-prettier": "^3.1.3",
-        "eslint": ">=5.0.0",
-        "@hapi/hapi": "^19.1.1",
-        "@hapi/lab": "^24.0.0",
+        "form-data": "^3.0.0",
         "prettier": "^1.19.1"
     }
 }
